--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -32,7 +32,7 @@
     <% end %>
 
     <div id="messages" class="mb-6" data-pagination-target="messages" data-oldest-timestamp="<%= @oldest_timestamp %>">
-      <%= render 'messages_list', objects: @objects %>
+      <%= render 'messages_list', objects: @objects, topic: @topic %>
     </div>
   </div>
 
