--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -38,7 +38,7 @@
 
   <div>
     <% if @topic.open? %>
-      <div id="typing_indicators_<%= @topic.id %>" class="my-3"></div>
+      <div id="typing_indicators_<%= @topic.id %>" class="my-3 space-y-1"></div>
 
       <%= render 'form', message: Message.new(topic: @topic) %>
     <% else %>
