fix(messages): incorrect id for pinned message in `cancel_edit` turbo stream

--- a/app/views/messages/cancel_edit.turbo_stream.erb
+++ b/app/views/messages/cancel_edit.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.replace (@pin ? "pinned_#{dom_id(@message)}" : dom_id(@message)) do %>
+<%= turbo_stream.replace (@pin ? 'pinned_message' : dom_id(@message)) do %>
   <%= render (@pin ? 'pinned_message' : @message), message: @message %>
 <% end %>
 
