--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,11 +1,12 @@
 <%= turbo_stream_from "user_#{current_user.id}_topic_#{@topic.id}" %>
 
-<div class="max-w-3xl mx-auto my-16">
+<div data-controller="reply-message" class="max-w-3xl mx-auto my-16">
   <%= link_to team_topic_messages_path(@team, @topic), class: 'group flex items-center gap-3 py-4 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@topic.title}" } do %>
     <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
 
     <span class="text-sm transition ease-in-out duration-200">Back to <%= @topic.title %></span>
   <% end %>
+
   <div class="mb-12">
     <div class="flex items-center gap-2 mb-3">
       <%= inline_svg_tag 'icons/comment-filled.svg', class: 'size-4 text-light' %>
@@ -86,17 +87,20 @@
     </div>
   <% end %>
 
-  <% if @message.replies.present? %>
+  <% nested_replies = @message.nested_replies %>
+  <% if nested_replies.present? %>
     <div class="mb-12">
       <div class="flex items-center gap-1 mb-3">
         <%= inline_svg_tag 'icons/reply-filled.svg', class: 'size-5 text-light' %>
         <h2 class="font-semibold">Replies</h2>
       </div>
 
-      <div class="card">
-        <% @message.replies.order(created_at: :asc).each do |reply| %>
-          <%= render 'message', message: reply, details_view: true, show_parent: false %>
-        <% end %>
+      <div data-controller="scroll" class="card">
+        <div id="messages">
+          <% nested_replies.sort_by(&:created_at).each do |reply| %>
+            <%= render 'message', message: reply, replies_list: true, show_parent: reply.parent != @message %>
+          <% end %>
+        </div>
       </div>
     </div>
   <% end %>
