style(messages): adjust spacing and padding of message actions

--- a/app/views/messages/_actions.html.erb
+++ b/app/views/messages/_actions.html.erb
@@ -1,5 +1,6 @@
 <% pinned = defined?(pinned) ? pinned : false %>
 <% link = local_assigns.fetch(:link, true) %>
+<% details_view = local_assigns.fetch(:details_view, false) %>
 <% replies_list = local_assigns.fetch(:replies_list, false) %>
 
 <% user = message.user %>
@@ -12,11 +13,11 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="flex items-center gap-4 mt-1 <%= user == current_user || pinned ? 'justify-end' : 'ml-1' %>"
+  class="flex items-center gap-1.5 mt-1 <%= user == current_user || pinned ? 'justify-end' : 'ml-1' %>"
 >
   <% if link %>
-    <%= link_to team_topic_message_path(team, topic, message), class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-indigo-500 transition duration-200 ease-in-out' do %>
-      <%= inline_svg_tag 'icons/info.svg', class: 'size-4' %>
+    <%= link_to team_topic_message_path(team, topic, message), class: 'p-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-indigo-500 transition duration-200 ease-in-out' do %>
+      <%= inline_svg_tag 'icons/info.svg', class: 'size-4 shrink-0' %>
       <span class="sr-only">View message details</span>
     <% end %>
   <% end %>
@@ -25,13 +26,13 @@
 
   <%= render 'messages/reply_button', message: message, current_user: current_user, pinned: pinned unless replies_list %>
 
-  <% if current_user.owns?(team) %>
+  <% if current_user.owns?(team) && !details_view && !replies_list %>
     <% unless message.pinned? %>
       <% pinned_message = topic.messages.find_by(pinned: true) %>
       <% if pinned_message.present? %>
 
-        <button type="button" data-action="mousedown->modal#open" data-modal-id="pinMessage_<%= message.id %>" class="p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out">
-          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 mt-px' %>
+        <button type="button" data-action="mousedown->modal#open" data-modal-id="pinMessage_<%= message.id %>" class="p-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out">
+          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 shrink-0' %>
           <span class="sr-only">Pin message</span>
         </button>
 
@@ -63,13 +64,13 @@
           </div>
 
           <button data-action="mousedown->modal#close" type="button" data-modal-id="pinMessage_<%= message.id %>" class="modal-x-btn">
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4 shrink-0' %>
             <span class="sr-only">Close</span>
           </button>
         </div>
       <% else %>
-        <%= button_to pin_team_topic_message_path(team, topic, message), method: :patch, data: { turbo_stream: true }, class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out' do %>
-          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 mt-0.5' %>
+        <%= button_to pin_team_topic_message_path(team, topic, message), method: :patch, data: { turbo_stream: true }, class: 'p-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-yellow-500 transition duration-200 ease-in-out' do %>
+          <%= inline_svg_tag 'icons/pin.svg', class: 'size-4 shrink-0' %>
           <span class="sr-only">Pin message</span>
         <% end %>
       <% end %>
@@ -77,18 +78,18 @@
   <% end %>
 
   <% if user == current_user && message.editable? %>
-    <%= link_to edit_team_topic_message_path(message.team, message.topic, message, pinned: pinned, replies_list: replies_list),
+    <%= link_to edit_team_topic_message_path(message.team, message.topic, message, pinned:, replies_list:),
                 data: { turbo_stream: true, turbo_frame: @pin ? "pinned_#{dom_id(message)}" : dom_id(message) },
-                class: 'p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-orange-500 transition duration-200 ease-in-out' do
+                class: 'p-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-orange-500 transition duration-200 ease-in-out' do
     %>
-      <%= inline_svg_tag 'icons/edit.svg', class: 'size-4' %>
+      <%= inline_svg_tag 'icons/edit.svg', class: 'size-4 shrink-0' %>
       <span class="sr-only">Edit message</span>
     <% end %>
   <% end %>
 
   <% if (user == current_user && message.deletable?) || current_user.owns?(team) %>
-    <button type="button" data-action="mousedown->modal#open" data-modal-id="deleteMessage_<%= message.id %>" class="p-1 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-rose-500 transition duration-200 ease-in-out">
-      <%= inline_svg_tag 'icons/trash.svg', class: 'size-4 mt-px' %>
+    <button type="button" data-action="mousedown->modal#open" data-modal-id="deleteMessage_<%= message.id %>" class="p-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-rose-500 transition duration-200 ease-in-out">
+      <%= inline_svg_tag 'icons/trash.svg', class: 'size-4 shrink-0' %>
       <span class="sr-only">Delete message</span>
     </button>
 
