--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -26,7 +26,7 @@
               <% end %>
             </span>
           </div>
-          <p class="text-xs p-2 pb-4 sm:pb-5 rounded-t-2xl <%= parent.deleted? ? 'text-red-600 dark:text-red-300 border border-red-300 bg-red-50 dark:border-red-900 dark:bg-red-950/80' : details_view || replies_list ? 'text-normal bg-slate-300/60 dark:bg-slate-700/60 border border-slate-400 dark:border-slate-600' : 'text-light bg-slate-200/60 dark:bg-slate-800 border border-slate-300 dark:border-slate-700' %>">
+          <p class="text-xs p-2 pb-4 sm:pb-5 rounded-t-2xl <%= parent.deleted? ? 'text-red-600 dark:text-red-300 border border-red-300 bg-red-50 dark:border-red-900 dark:bg-red-950/80' : details_view || replies_list ? 'text-normal bg-slate-300/60 dark:bg-slate-700/60 border border-slate-400/60 dark:border-slate-600' : 'text-light bg-slate-200/60 dark:bg-slate-800 border border-slate-300 dark:border-slate-700' %>">
             <%= truncate(parent.content, length: 100) %>
           </p>
         </div>
