--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -7,12 +7,12 @@
     }
 
     &.btn-sm {
-      @apply px-4 py-1 text-xs;
+      @apply px-3.5 py-1.5 text-xs;
     }
   }
 
   .btn-primary {
-    @apply bg-gradient-to-b from-indigo-500 to-indigo-600 hover:from-indigo-600 hover:to-indigo-700 text-white;
+    @apply bg-gradient-to-br from-violet-500 to-indigo-600 dark:to-indigo-500 hover:from-violet-600 hover:to-indigo-700 dark:hover:to-indigo-600 text-white;
 
     &.btn-outline {
       @apply border border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-600 hover:text-white;
@@ -75,12 +75,12 @@
     }
 
     &.btn-muted {
-      @apply border-none bg-slate-100 text-slate-600 hover:bg-slate-200 dark:bg-slate-800 dark:text-slate-300 dark:hover:bg-slate-700;
+      @apply border-none bg-slate-200 text-slate-600 hover:bg-slate-300 dark:bg-slate-800 dark:text-slate-300 dark:hover:bg-slate-700;
     }
   }
 
   .btn-transparent {
-    @apply bg-transparent text-current hover:bg-slate-100 dark:hover:bg-slate-800;
+    @apply bg-transparent text-current hover:bg-slate-200 dark:hover:bg-slate-800;
   }
 
   .btn-link {
