style(strava): add subtle background to strava one-way sync notice

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -95,7 +95,7 @@
           <% end %>
         <% end %>
 
-        <div class="flex items-center gap-2 md:gap-3 p-2 md:p-3 mt-4 rounded-lg border border-slate-200 dark:border-slate-700">
+        <div class="flex items-center gap-2 md:gap-3 p-2 md:p-3 mt-4 rounded-lg bg-slate-100 dark:bg-slate-700/30 border border-slate-200 dark:border-slate-700">
           <%= inline_svg_tag 'icons/info.svg', class: 'size-4 shrink-0' %>
           <p class="text-light text-xs text-pretty">Currently, activities can only sync from Strava to PaceMaker. Syncing from PaceMaker to Strava will be available in a future update. Reverse syncing will be enabled automatically when it becomes available if you opt in.</p>
         </div>
