style: adjust colors of sun and moon icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
           <% else %>
             <div class="flex justify-end mt-4 mr-4">
               <button onclick="document.documentElement.classList.toggle('dark')" class="rounded-lg p-2 hover:bg-slate-200 dark:hover:bg-slate-800 active:bg-slate-200 dark:active:bg-slate-800 transition duration-200 ease-in-out">
-                <%= inline_svg_tag 'icons/sun.svg', class: 'size-6 block dark:hidden text-yellow-500' %>
-                <%= inline_svg_tag 'icons/moon.svg', class: 'size-6 hidden dark:block text-indigo-600' %>
+                <%= inline_svg_tag 'icons/sun.svg', class: 'size-5 block dark:hidden text-yellow-500' %>
+                <%= inline_svg_tag 'icons/moon.svg', class: 'size-5 hidden dark:block text-indigo-600 dark:text-indigo-500' %>
               </button>
             </div>
           <% end %>
