--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -12,7 +12,7 @@
   }
 
   .btn-primary {
-    @apply bg-gradient-to-br from-violet-500 to-indigo-600 dark:to-indigo-500 hover:from-violet-600 hover:to-indigo-700 dark:hover:to-indigo-600 text-white;
+    @apply bg-gradient-to-br from-violet-500 via-indigo-500 to-indigo-600 hover:from-violet-600 hover:via-indigo-600 hover:to-indigo-700 text-white;
 
     &.btn-outline {
       @apply border border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-600 hover:text-white;
