--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -25,7 +25,7 @@
        aria-valuemax="100"
        aria-label="<%= label %>"
     >
-    <div class="<%= size_classes[size] %> bg-gradient-to-b from-indigo-400 to-indigo-500 dark:from-indigo-500 dark:to-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
+    <div class="<%= size_classes[size] %> bg-gradient-to-b from-violet-500 via-indigo-500 to-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
     <% if local_assigns[:marker] %>
       <div class="<%= size_classes[size] + ' ' + comparison_classes %> absolute top-0 left-0 max-w-full" style="width: <%= marker %>%"></div>
     <% end %>
