--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="bg-slate-50 dark:bg-slate-900 text-soft text-center text-sm px-2 py-6 max-sm:pb-28">
-  <p class="mb-1">&copy; <%= Time.current.year %> PaceMaker. All rights reserved.</p>
-  <div class="flex justify-center gap-x-6">
+  <p class="mb-1 max-sm:mb-4">&copy; <%= Time.current.year %> PaceMaker. All rights reserved.</p>
+  <div class="flex max-sm:flex-col justify-center gap-x-6 gap-y-4">
     <%= link_to 'Privacy Policy', privacy_policy_path, class: 'btn-link underline' %>
     <%= link_to 'Strava Data Usage Policy', strava_policy_path, class: 'btn-link underline' %>
     <%= link_to 'Google Data Usage Policy', google_policy_path, class: 'btn-link underline' %>
