--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -78,7 +78,7 @@
     <% if current_user.strava_account_linked? %>
       <div class="flex gap-4 mb-6">
         <p class="text-soft text-sm">Connected.</p>
-        <%= link_to 'View your Strava account', "https://strava.com/athletes/#{current_user.strava_uid}", class: 'btn-link text-sm' %>
+        <%= link_to 'View your Strava account', current_user.strava_url, class: 'cursor-pointer font-semibold text-[#fc5200] hover:underline focus:ring-transparent text-sm' %>
       </div>
 
       <button data-action="mousedown->modal#open" data-modal-id="unlinkStravaAccountModal" class="btn btn-destructive">
