fix(landing): resolve transparent status bar on landing page when installed as PWA

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,5 +1,5 @@
 <title><%= content_for?(:title) ? "#{yield(:title)} / PaceMaker" : 'PaceMaker' %></title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
 <!-- PWA tags -->
 <meta name="mobile-web-app-capable" content="yes">
