--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -4,7 +4,8 @@
     data-notifications-hidden-class="notification--hidden"
     data-notifications-visible-class="notification--visible"
     data-notifications-exit-class="notification--exit"
-    class="fixed top-8 sm:right-8 w-full max-w-[80vw] mx-[10vw] sm:max-w-sm sm:mx-0 space-y-1 z-50 flex flex-col items-center sm:items-end"
+    class="fixed sm:right-8 w-full max-w-[80vw] mx-[10vw] sm:max-w-sm sm:mx-0 space-y-1 z-50 flex flex-col items-center sm:items-end"
+    style="top: env(safe-area-inset-top, 2rem);"
   >
     <% if notice %>
       <div
