--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body class="relative antialiased font-sans font-normal leading-normal text-normal bg-slate-50 dark:bg-slate-900 selection:bg-indigo-500/40">
-    <header class="fixed inset-x-0 top-0 z-10 py-2 px-4 sm:px-6 bg-slate-50 dark:bg-slate-900 border-b border-slate-900/5 dark:border-slate-100/10">
+    <header class="fixed inset-x-0 top-0 z-10 pb-2 px-4 sm:px-6 bg-slate-50 dark:bg-slate-900 border-b border-slate-900/5 dark:border-slate-100/10" style="padding-top: env(safe-area-inset-top, 0.5rem);">
       <nav class="relative z-50 flex items-center justify-between max-w-5xl mx-auto">
         <%= inline_svg_tag 'logo.svg', class: 'h-6 sm:h-7' %>
 
