--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -101,7 +101,7 @@
           </p>
           <div class="flex items-center gap-2">
             <%= sms_to user.phone_number, class: 'btn btn-white w-full gap-2' do %>
-              <%= inline_svg_tag 'icons/message-bubble.svg', class: 'size-5' %>
+              <%= inline_svg_tag 'icons/message-bubble-filled.svg', class: 'size-5' %>
               <span>Text</span>
             <% end %>
 
