--- a/app/views/runs/_edit_run_modal.html.erb
+++ b/app/views/runs/_edit_run_modal.html.erb
@@ -1,13 +1,13 @@
 <!-- Edit Run Modal Backdrop -->
 <div
   data-modal-target="backdrop"
-  data-modal-id="editRunModal"
+  data-modal-id="editRunModal_<%= run.id %>"
   data-action="mousedown->modal#backdropClose"
   class="modal-backdrop opacity-0 pointer-events-none"></div>
 
 <!-- Edit Run Modal -->
 <div
-  id="editRunModal"
+  id="editRunModal_<%= run.id %>"
   role="dialog"
   aria-label="Edit Run Form"
   tabindex="-1"
@@ -21,7 +21,7 @@
   <%= render 'runs/form_modal', run: run %>
 
   <!-- Close button -->
-  <button data-action="mousedown->modal#close" type="button" data-modal-id="editRunModal" class="modal-x-btn">
+  <button data-action="mousedown->modal#close" type="button" data-modal-id="editRunModal_<%= run.id %>" class="modal-x-btn">
     <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
     <span class="sr-only">Close</span>
   </button>
