--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,97 +1,103 @@
+<% details_view = local_assigns.fetch(:details_view, false) %>
+
 <% run_user = run.user %>
 <% team = params[:team] ? Team.find(params[:team]) : local_assigns[:team] %>
 
-<div class="card">
-  <div class="flex items-start gap-2 mb-4">
-    <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
-      <%= render 'shared/user_photo', user: run_user, size: :xs, icon_background: :darker %>
-      <div>
-        <p>
-          <span class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500 mr-0.5"><%= run_user.default_name %></span>
-          <%= content_tag(:span, run_user.username, class: 'text-soft text-xs font-normal') if run_user.display_name? %>
-        </p>
-        <p class="text-xs text-soft"><%= pretty_date(run.date, include_weekday: true, month_format: :long, include_year: run.date.year != Date.current.year) %></p>
-      </div>
-    <% end %>
+<div class="flex flex-col gap-1.5">
+  <div class="card">
+    <div class="flex items-start gap-2 mb-4">
+      <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
+        <%= render 'shared/user_photo', user: run_user, size: :xs, icon_background: :darker %>
+        <div>
+          <p>
+            <span class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500 mr-0.5"><%= run_user.default_name %></span>
+            <%= content_tag(:span, run_user.username, class: 'text-soft text-xs font-normal') if run_user.display_name? %>
+          </p>
+          <p class="text-xs text-soft"><%= pretty_date(run.date, include_weekday: true, month_format: :long, include_year: run.date.year != Date.current.year) %></p>
+        </div>
+      <% end %>
+    </div>
 
-    <%= render 'runs/actions_dropdown', run: run if run_user == current_user %>
+    <%= run_content_wrapper(run, team, local_assigns[:turbo_frame]) do %>
+      <% if run.duration? %>
+        <div class="flex items-center justify-around mt-8 mb-6">
+          <div class="flex flex-col items-center">
+            <%= inline_svg_tag 'icons/ruler.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
+            <p class="font-bold">
+              <span class="text-xl"><%= run.distance %></span>
+              <span class="text-base">mi</span>
+            </p>
+            <p class="text-soft text-xs">Distance</p>
+          </div>
+
+          <div class="flex flex-col items-center">
+            <%= inline_svg_tag 'icons/clock.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
+            <p class="font-bold">
+              <span class="text-xl"><%= clock_time_display(run.duration) %></span>
+              <span class="text-base"></span>
+            </p>
+            <p class="text-soft text-xs">Time</p>
+          </div>
+
+          <div class="flex flex-col items-center">
+            <%= inline_svg_tag 'icons/speedometer.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
+            <p class="font-bold">
+              <span class="text-xl"><%= clock_time_display(run.pace) %> /</span><span class="text-base">mi</span>
+            </p>
+            <p class="text-soft text-xs">Pace</p>
+          </div>
+        </div>
+      <% else %>
+        <div class="flex items-center gap-2 sm:gap-3 mt-4">
+          <%= inline_svg_tag 'icons/ruler.svg', class: 'size-5.5 text-soft shrink-0' %>
+          <div class="flex items-end gap-2">
+            <p class="text-light">Distance:</p>
+            <p class="font-bold">
+              <span class="text-xl"><%= run.distance %></span>
+              <span class="text-base">mi</span>
+            </p>
+          </div>
+        </div>
+      <% end %>
+
+      <% if run.notes? %>
+        <% sanitized_notes = sanitize(run.notes, tags: %w(strong em b i p br)) %>
+
+        <div class="flex items-start gap-2 sm:gap-3 mt-4">
+          <%= inline_svg_tag 'icons/comment.svg', class: 'size-5.5 text-soft shrink-0 mt-0.5' %>
+          <div class="text-light text-sm space-y-1.5">
+            <%= simple_format(
+              if current_page?(run) || local_assigns[:turbo_frame]
+                sanitized_notes
+              else
+                truncate(sanitized_notes, length: 80, separator: ' ', omission: '') { content_tag(:span, '... (see more)', class: 'text-muted') }
+              end
+            ) %>
+          </div>
+        </div>
+      <% end %>
+
+      <% if details_view %>
+        <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 mt-4 border-t dark:border-slate-700">
+          <div class="flex items-center gap-2 text-soft text-xs">
+            <time class="whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>"><span class="font-semibold">Posted</span> <%= format_date(run.created_at) %></time>
+            <% if run.edited? %>
+              <span class="bg-slate-500 rounded-full size-0.5 shrink-0"></span>
+              <time class="whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>"><span class="font-semibold">Edited</span> <%= format_date(run.updated_at) %></time>
+            <% end %>
+          </div>
+
+          <% streak = run.streak_value(team) %>
+          <div class="flex flex-wrap items-center gap-2">
+            <%= render 'runs/long_run_badge' if run.long_run_for_team?(team) %>
+            <%= render 'runs/streak_badge', streak: streak unless streak.nil? || streak.zero? || streak.negative? || streak == 1 %>
+          </div>
+        </div>
+
+        <%= link_to 'View on Strava', run.strava_url, class: 'cursor-pointer font-semibold text-[#fc5200] hover:underline focus:ring-transparent text-xs' if run.strava_url? %>
+      <% end %>
+    <% end %>
   </div>
 
-  <%= run_content_wrapper(run, team, local_assigns[:turbo_frame]) do %>
-    <% if run.duration? %>
-      <div class="flex items-center justify-around mt-8 mb-6">
-        <div class="flex flex-col items-center">
-          <%= inline_svg_tag 'icons/ruler.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
-          <p class="font-bold">
-            <span class="text-xl"><%= run.distance %></span>
-            <span class="text-base">mi</span>
-          </p>
-          <p class="text-soft text-xs">Distance</p>
-        </div>
-
-        <div class="flex flex-col items-center">
-          <%= inline_svg_tag 'icons/clock.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
-          <p class="font-bold">
-            <span class="text-xl"><%= clock_time_display(run.duration) %></span>
-            <span class="text-base"></span>
-          </p>
-          <p class="text-soft text-xs">Time</p>
-        </div>
-
-        <div class="flex flex-col items-center">
-          <%= inline_svg_tag 'icons/speedometer.svg', class: 'size-10 text-muted shrink-0 mb-1' %>
-          <p class="font-bold">
-            <span class="text-xl"><%= clock_time_display(run.pace) %> /</span><span class="text-base">mi</span>
-          </p>
-          <p class="text-soft text-xs">Pace</p>
-        </div>
-      </div>
-    <% else %>
-      <div class="flex items-center gap-2 sm:gap-3 my-4">
-        <%= inline_svg_tag 'icons/ruler.svg', class: 'size-5.5 text-soft shrink-0' %>
-        <div class="flex items-end gap-2">
-          <p class="text-light">Distance:</p>
-          <p class="font-bold">
-            <span class="text-xl"><%= run.distance %></span>
-            <span class="text-base">mi</span>
-          </p>
-        </div>
-      </div>
-    <% end %>
-
-    <% if run.comments? %>
-      <% sanitized_comments = sanitize(run.comments, tags: %w(strong em b i p br)) %>
-
-      <div class="flex items-start gap-2 sm:gap-3 mb-4">
-        <%= inline_svg_tag 'icons/comment.svg', class: 'size-5.5 text-soft shrink-0 mt-0.5' %>
-        <div class="text-light text-sm space-y-1.5">
-          <%= simple_format(
-            if current_page?(run) || local_assigns[:turbo_frame]
-              sanitized_comments
-            else
-              truncate(sanitized_comments, length: 80, separator: ' ', omission: '') { content_tag(:span, '... (see more)', class: 'text-muted') }
-            end
-          ) %>
-        </div>
-      </div>
-    <% end %>
-
-    <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 border-t dark:border-slate-700">
-      <div class="flex items-center gap-2 text-soft text-xs">
-        <time class="whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>"><span class="font-semibold">Posted</span> <%= format_date(run.created_at) %></time>
-        <% if run.edited? %>
-          <span>•</span>
-          <time class="whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>"><span class="font-semibold">Edited</span> <%= format_date(run.updated_at) %></time>
-        <% end %>
-      </div>
-
-      <% streak = run.streak_value(team) %>
-      <div class="flex flex-wrap items-center gap-2">
-        <%= render 'runs/long_run_badge' if run.long_run_for_team?(team) %>
-        <%= render 'runs/streak_badge', streak: streak unless streak.nil? || streak.zero? || streak.negative? || streak == 1 %>
-      </div>
-    </div>
-  <% end %>
-
-  <%= link_to 'View on Strava', run.strava_url, class: 'cursor-pointer font-semibold text-[#fc5200] hover:underline focus:ring-transparent text-xs' if run.strava_url? %>
+  <%= render 'runs/actions', run: run %>
 </div>
